@@ -379,8 +379,9 @@ static Class NSInvocation_class = nil;
      * ----------------------------
      */
 
-    NSDebugLLog(@"STSending",@"  invoking... (%@)",invocation);
+    NSDebugLLog(@"STSending",@"  invoking... (%@ %s)",invocation, [[invocation methodSignature] methodReturnType]);
     [invocation invoke];
+    NSDebugLLog(@"STSending",@"  done invoking.",invocation);
 
     /* FIXME */
     if(!stopRequested)
